@@ -1,3 +1,8 @@
+2007-03-20  Andreas Røsdal <andrearo@stud.ntnu.no>
+
+	* gnotski.c: Migrate gnotski to new high score API. Patch from
+	Thomas Andersen in bug #316360.   
+
 2006-09-17  Robert Ancell <robert.ancell@gmail.com>
 
         * gnotski.c: Mark solved puzzles in the menu (Gnome Bug #111543).
